--- a/views/room.ejs
+++ b/views/room.ejs
@@ -7,9 +7,7 @@
   <script>
     const ROOM_ID = "<%= roomId %>"
   </script>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="https://unpkg.com/peerjs@1.3.2/dist/peerjs.min.js"></script>
-  <script src="script.js" defer></script>
+  <script src="dist/index.js" defer></script>
   <title>Document</title>
   <style>
     #video-grid {
