--- a/views/room.ejs
+++ b/views/room.ejs
@@ -1,33 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://janus.conf.meetecho.com/janus.js"></script>
-  <script>
-    const ROOM_ID = "<%= roomId %>"
-  </script>
-  <script src="dist/index.js" defer></script>
-  <title>Document</title>
-  <style>
-    #video-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, 300px);
-      grid-auto-rows: 300px;
-    }
-    
-    video {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://janus.conf.meetecho.com/janus.js"></script>
+    <script>
+      const ROOM_ID = "<%= roomId %>"
+    </script>
+    <script src="dist/index.js" defer></script>
+    <title>Document</title>
+    <style>
+        #video-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, 300px);
+            grid-auto-rows: 300px;
+        }
+
+        video {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    </style>
 </head>
 <body>
-  <div id="connections"></div>
-  <div id="video-grid"></div>
+    <form id="main-form">
+        <input type="text" name="server" value="wss://farm.maindp.ru/ws" placeholder="Server" required>
+        <input type="number" name="roomId" value="1234" placeholder="Room" required>
+        <input type="text" name="displayName" value="name" placeholder="Enter your name" required>
+        <button type="submit">Join</button>
+    </form>
+    <div id="displays"></div>
 </body>
 </html>
