--- a/views/room.ejs
+++ b/views/room.ejs
@@ -13,26 +13,25 @@
     <script src="dist/index.js" defer></script>
     <title>Document</title>
     <style>
-        #video-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, 300px);
-            grid-auto-rows: 300px;
+        .display {
+            display: inline-block;
+            margin: 0 2em 2em 0;
         }
 
-        video {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
+        .display .name {
+            position: absolute;
+            background-color: black;
+            color: white;
         }
     </style>
 </head>
 <body>
-    <form id="main-form">
-        <input type="text" name="server" value="wss://farm.maindp.ru/ws" placeholder="Server" required>
-        <input type="number" name="roomId" value="1234" placeholder="Room" required>
-        <input type="text" name="displayName" value="name" placeholder="Enter your name" required>
-        <button type="submit">Join</button>
-    </form>
-    <div id="displays"></div>
+<form id="main-form">
+    <input type="text" name="server" value="wss://farm.maindp.ru/ws" placeholder="Server" required>
+    <input type="number" name="roomId" value="1234" placeholder="Room" required>
+    <input type="text" name="displayName" value="name" placeholder="Enter your name" required>
+    <button type="submit">Join</button>
+</form>
+<div id="displays"></div>
 </body>
 </html>
