--- a/views/room.ejs
+++ b/views/room.ejs
@@ -20,6 +20,12 @@
             background-color: black;
             color: white;
         }
+
+        canvas {
+            width: 600px;
+            height: 300px;
+            border: 1px solid black;
+        }
     </style>
 </head>
 <body>
@@ -30,5 +36,6 @@
     <button type="submit">Join</button>
 </form>
 <div id="displays"></div>
+<canvas></canvas>
 </body>
 </html>
